--- a/html/ui.html
+++ b/html/ui.html
@@ -13,13 +13,30 @@
 
     <link rel="preload" href="./fonts/KumbhSans-Bold.ttf" as="font" crossorigin="anonymous" />
     <link rel="preload" href="./fonts/KumbhSans-Regular.ttf" as="font" crossorigin="anonymous" />
-    <link rel="preload" href="./fonts/MerriweatherSans-Regular.ttf" as="font" crossorigin="anonymous" />
 </head>
 
 <body>
+    <div class="wrapper">
+        <div class="container">
+            <div class="dp-tabs-container">
+                <select class="dp-select" id="dp-select">
+                    <optgroup label="Pick a tab">
+                        <option value="dispatch">Dispatch</option>
+                        <option value="officers">Officers</option>
+                    </optgroup>
+                </select>
+            </div>
+            <div class="dp-tab-container">
+                <div id="dispatch" class="dp-tabs dispatch">
+                    
+                </div>
+                <div id="officers" class="dp-tabs officers">
 
+                </div>
+            </div>
+        </div>
+    </div>
 
-    <script type="text/javascript" src="../config/config.js"></script>
     <script type="text/javascript" src="./js/nui.js"></script>
     <script type="text/javascript" src="./js/script.js"></script>
     <script defer src="https://kit.fontawesome.com/3828d6dd29.js" crossorigin="anonymous"></script>
