feat(ui): added call design

--- a/html/ui.html
+++ b/html/ui.html
@@ -17,6 +17,7 @@
 
 <body>
     <div class="wrapper">
+        <button id="test">Hola</button>
         <div class="container">
             <div class="dp-tabs-container">
                 <select class="dp-select" id="dp-select">
@@ -28,10 +29,25 @@
             </div>
             <div class="dp-tab-container">
                 <div id="dispatch" class="dp-tabs dispatch">
-                    
+                    <div class="dp-header-container">
+                        <span id="num-slides" class="header-text left">1/1</span>
+                        <span class="header-title">Some title</span>
+                        <span class="header-text right">10:30PM</span>
+                    </div>
+                    <div id="main-container" class="dp-info-container">
+                        <div class="container-slides">
+                            <span class="slide-text">jfskjsadkjsj dksaj kjsdksajdkjsakjdsj kdasjdkjaskd jaksjdkasjdk jaskdjsakj dsjakd jsadjaskdj askjdk ajd jasdkasjd kasjdjakjsdk jsakdjakjd sk</span>
+                            <img class="slide-img" src="./img/adder.png">
+                        </div>
+                    </div>
+                    <div class="dp-move-container">
+                        <i id="before" class="fas fa-backward"></i>
+                        <i class="fas fa-play"></i>
+                        <i id="after" class="fas fa-forward"></i>
+                    </div>
                 </div>
                 <div id="officers" class="dp-tabs officers">
-
+                
                 </div>
             </div>
         </div>
