fix(js): Changing slides

--- a/html/ui.html
+++ b/html/ui.html
@@ -39,6 +39,10 @@
                             <span class="slide-text">jfskjsadkjsj dksaj kjsdksajdkjsakjdsj kdasjdkjaskd jaksjdkasjdk jaskdjsakj dsjakd jsadjaskdj askjdk ajd jasdkasjd kasjdjakjsdk jsakdjakjd sk</span>
                             <img class="slide-img" src="./img/adder.png">
                         </div>
+                        <div class="container-slides">
+                            <span class="slide-text">Algo diferent</span>
+                            <img class="slide-img" src="./img/adder.png">
+                        </div>
                     </div>
                     <div class="dp-move-container">
                         <i id="before" class="fas fa-backward"></i>
