fix(js): Error if slide doesn't exist

--- a/html/ui.html
+++ b/html/ui.html
@@ -30,23 +30,19 @@
             <div class="dp-tab-container">
                 <div id="dispatch" class="dp-tabs dispatch">
                     <div class="dp-header-container">
-                        <span id="num-slides" class="header-text left">1/1</span>
+                        <span id="num-slides" class="header-text left">0 / 0</span>
                         <span class="header-title">Some title</span>
                         <span class="header-text right">10:30PM</span>
                     </div>
                     <div id="main-container" class="dp-info-container">
-                        <div class="container-slides">
-                            <span class="slide-text">jfskjsadkjsj dksaj kjsdksajdkjsakjdsj kdasjdkjaskd jaksjdkasjdk jaskdjsakj dsjakd jsadjaskdj askjdk ajd jasdkasjd kasjdjakjsdk jsakdjakjd sk</span>
-                            <img class="slide-img" src="./img/adder.png">
+                        <div id="preview" class="prev-cont">
+                            <span>Nothing here...</span>
                         </div>
-                        <div class="container-slides">
-                            <span class="slide-text">Algo diferent</span>
-                            <img class="slide-img" src="./img/adder.png">
-                        </div>
+
                     </div>
                     <div class="dp-move-container">
                         <i id="before" class="fas fa-backward"></i>
-                        <i class="fas fa-play"></i>
+                        <i id="location" class="fas fa-play"></i>
                         <i id="after" class="fas fa-forward"></i>
                     </div>
                 </div>
