feat(js): Added time to each slide creation

--- a/html/ui.html
+++ b/html/ui.html
@@ -32,7 +32,7 @@
                     <div class="dp-header-container">
                         <span id="num-slides" class="header-text left">0 / 0</span>
                         <span class="header-title">Some title</span>
-                        <span class="header-text right">10:30PM</span>
+                        <span id="num-time" class="header-text right">10:30PM</span>
                     </div>
                     <div id="main-container" class="dp-info-container">
                         <div id="preview" class="prev-cont">
