feat(client/js): Added event for adding new slides

--- a/html/ui.html
+++ b/html/ui.html
@@ -16,8 +16,7 @@
 </head>
 
 <body>
-    <div class="wrapper">
-        <button id="test">Hola</button>
+    <div id="wrapper" class="wrapper">
         <div class="container">
             <div class="dp-tabs-container">
                 <select class="dp-select" id="dp-select">
