--- a/html/ui.html
+++ b/html/ui.html
@@ -17,6 +17,7 @@
 
 <body>
     <div id="wrapper" class="wrapper">
+        <button id="test">a</button>
         <div class="container">
             <div class="dp-tabs-container">
                 <select class="dp-select" id="dp-select">
@@ -30,14 +31,14 @@
                 <div id="dispatch" class="dp-tabs dispatch">
                     <div class="dp-header-container">
                         <span id="num-slides" class="header-text left">0 / 0</span>
-                        <span class="header-title">Some title</span>
+                        <span id="num-title" class="header-title">Some title</span>
                         <span id="num-time" class="header-text right">10:30PM</span>
                     </div>
                     <div id="main-container" class="dp-info-container">
                         <div id="preview" class="prev-cont">
                             <span>Nothing here...</span>
                         </div>
-
+                        <!--Insert Data-->
                     </div>
                     <div class="dp-move-container">
                         <i id="before" class="fas fa-backward"></i>
