fix(ui): Duplicate id + Officers tab

--- a/html/ui.html
+++ b/html/ui.html
@@ -48,8 +48,8 @@
                     </div>
                 </div>
                 <div id="officers" class="dp-tabs officers">
-                    <div id="main-container" class="dp-info-container">
-                        <div id="preview" class="prev-cont">
+                    <div id="main-container" style="border-radius: 0.6vh;" class="dp-info-container">
+                        <div id="soon" class="prev-cont">
                             <span>Muy pronto...</span>
                         </div>
                     </div>
